# line_endings_converter

./: CMakeLists.txt
cmake/: dependencies.cmake
targets/backend/: CMakeLists.txt
targets/backend/include/: backend.h  backend.hpp
targets/backend/source/: backend.c
targets/backend/source/argument_parser/: argument_parser.c  argument_parser.h
targets/backend/source/directory_processor/: directory_processor.c  directory_processor.h
targets/backend/source/file_processor/: file_processor.c  file_processor.h
targets/backend/source/global_incorrect_line_endings_count/: global_incorrect_line_endings_count.c  global_incorrect_line_endings_count.h
targets/backend/source/global_incorrect_line_endings_count_logger/: global_incorrect_line_endings_count_logger.c  global_incorrect_line_endings_count_logger.h
targets/backend/source/line_endings/: line_endings.c  line_endings.h
targets/backend/source/settings/: settings.c  settings.h
targets/backend/source/usage_logger/: usage_logger.c  usage_logger.h
targets/backend/tests/: arguments.cpp
targets/frontend/: CMakeLists.txt
targets/frontend/source/: main.c
